--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,3 +44,8 @@ a {
   left: 0;
   position: absolute;
 }
+.thirdSection{
+  background: transparent linear-gradient(-67deg,rgba(18,29,48,0) 0%,#0f1f36 62%,#606874 100%) 0% 0% no-repeat padding-box;
+  border-radius: 21px;
+  top: 40px;
+}
